update aside z-index to fix map bug

--- a/public_html/styles/homepage.css
+++ b/public_html/styles/homepage.css
@@ -6,7 +6,7 @@ div#map {
     width: 100%;
     max-width: 100%;
     min-height: 480px;
-    z-index: -1000;
+    z-index: 0;
 }
 
 /* -----------------------------------
@@ -73,7 +73,6 @@ RESPONSIVE CODE
     div#map {
         max-width: 100vw;
         min-height: 480px;
-        margin-top: 2.618rem;
     }
     div#mostLivableCitiesTableContainer {
         overflow-y: scroll;
@@ -81,7 +80,6 @@ RESPONSIVE CODE
     }
     div#airQuality {
         max-width: 100vw;
-        margin-top: 2.618rem;
     }
 }
 
